[project]
name = "vbwlf"
version = "0.1.0"
description = "Virginia Beach Water Level Forecast"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "poethepoet>=0.37.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.2",
    "ty>=0.0.1a21",
]

[tool.poe.tasks]
test = "pytest --cov --cov-report term-missing"

_format = "ruff format ."
_clean = "ruff check --fix ."
format.sequence = ["_format", "_clean"]

_type = "ty check ."
_check = "ruff check ."
lint.sequence = ["_type", "_check"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["usgs/"]
